using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationNames 
{
    //Animacje gracza
    public static string playerImpact = "Impact";
    public static string playerDying = "Dying";
    public static string playerSlash = "Slash";
    public static string playerSlashSpeed = "SlashSpeed";
    public static string playerForward = "Forward";
    public static string playerRight = "Right";
    public static string playerThrowSpell = "ThrowSpell";


    //Animacja muchy
    public static string flyDying = "SmiercMuchy";
    public static string flyFreeze = "freeze";

    //Animacja slima
    public static string slimeDying = "Smierc";
    public static string slimeFreeze = "freeze";

    //Animacja slima
    public static string flyQueenDying = "Smierc";
    public static string flyQueenFreeze = "freeze";

}
